# Mathter

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Example.cpp  JETBRAINS_REPRO_INSTRUCTIONS.md  LICENCE  Mathter.runsettings  Mathter.sln  Mathter.vcxproj  Mathter.vcxproj.filters  MathterConfig.cmake.in  Measure.cpp  README.md  TestGenerators.hpp  TestGeometry.cpp  TestIntersection.cpp  TestMatrix.cpp  TestQuaternion.cpp  TestVector.cpp  appveyor.yml  bench_results.txt  codecov.yml  conanfile.py  conanfile.txt  embold.yaml  main.cpp  sonar-project.properties
.github/build_profiles/: clang17d  clang17r  clang20d  clang20r  gcc17d  (+7 more)
AsmList/: main.asm
Benchmark/: Measure.cpp  Measure.hpp  compiler_benchmark.xlsx
CodeGen/: CodeGen.vcxproj  HomeProgrammingMathterMathterSwizzle_2.inc.hpp  HomeProgrammingMathterMathterSwizzle_3.inc.hpp  HomeProgrammingMathterMathterSwizzle_4.inc.hpp  main.cpp
Mathter/: Approx.hpp  DefinitionsUtil.hpp  Geometry.hpp  IoStream.hpp  Mathter.natvis  Matrix.hpp  Quaternion.hpp  Simd.hpp  Simd4f_default.hpp  Simd4f_sse.hpp  Simd_SSE2.hpp  Utility.hpp  Vector.hpp
Reference/: doxygen_config  index.html
Test/: CMakeLists.txt  TestGenerators.hpp  TestGeometry.cpp  TestIntersection.cpp  TestMatrix.cpp  TestMatrixArithmetic.cpp  TestMatrixDecomposition.cpp  TestMatrixFunction.cpp  TestMatrixImpl.cpp  TestMatrixVectorArithmetic.cpp  TestQuaternion.cpp  TestTransforms.cpp  TestVector.cpp  TestVectorArithmetic.cpp  TestVectorConcat.cpp  TestVectorFunction.cpp  TestVectorImpl.cpp  main.cpp
benchmark/: Benchmark.cpp  Benchmark.hpp  BenchmarkMatrixArithmetic.cpp  BenchmarkVectorArithmetic.cpp  CMakeLists.txt  Fixtures.hpp  Input.hpp  Utility.hpp  main.cpp
benchmark/Decompositions/: BenchmarkDecompositions.cpp
benchmark/Matrix/: BenchmarkArithmetic.cpp  BenchmarkMath.cpp
benchmark/Scalar/: BenchmarkArithmetic.cpp  BenchmarkMath.cpp  Input.hpp
benchmark/Vector/: BenchmarkArithmetic.cpp  BenchmarkMath.cpp
benchmark/z_MSVC_Repro/: Matrix2x2Multiply.cpp
docs/: Decompositions.md  Example.cpp  Geometry.md  GettingStarted.md  Guide.md  MathTypes.md  Transforms.md  bench_results.txt  compiler_benchmark.xlsx  doxygen_config  index.html
examples/: CMakeLists.txt  Camera.cpp  Camera.hpp  Math.hpp  Object.cpp  Object.hpp  main.cpp
include/Mathter/: CMakeLists.txt  Geometry.hpp  IoStream.hpp  Mathter.natvis  Matrix.hpp  Quaternion.hpp  Transforms.hpp  Utility.hpp  Vector.hpp
include/Mathter/Common/: Approx.hpp  Definitions.hpp  DeterministicInitializer.hpp  Functional.hpp  LoopUtil.hpp  MathUtil.hpp  OptimizationUtil.hpp  Range.hpp  Traits.hpp  TypeTraits.hpp  Types.hpp
include/Mathter/Decompositions/: DecomposeLU.hpp  DecomposeQR.hpp  DecomposeSVD.hpp
include/Mathter/Geometry/: BezierCurve.hpp  Hyperplane.hpp  Intersection.hpp  Line.hpp  LineSegment.hpp  Ray.hpp  Triangle.hpp
include/Mathter/Matrix/: Algorithm.hpp  Arithmetic.hpp  Cast.hpp  Comparison.hpp  Math.hpp  Matrix.hpp  MatrixArithmetic.hpp  MatrixCast.hpp  MatrixCompare.hpp  MatrixFunction.hpp  MatrixImpl.hpp  MatrixVectorArithmetic.hpp
include/Mathter/Quaternion/: Arithmetic.hpp  Comparison.hpp  Literals.hpp  Math.hpp  Quaternion.hpp  QuaternionArithmetic.hpp  QuaternionCompare.hpp  QuaternionFunction.hpp  QuaternionImpl.hpp  QuaternionLiterals.hpp  QuaternionVectorArithmetic.hpp  RotationArithmetic.hpp
include/Mathter/SIMD/: Simd.hpp  Simd_SSE2.hpp
include/Mathter/Swizzle/: Swizzle_1.inc.hpp  Swizzle_2.inc.hpp  Swizzle_3.inc.hpp  Swizzle_4.inc.hpp
include/Mathter/Transforms/: IdentityBuilder.hpp  OrthographicBuilder.hpp  PerspectiveBuilder.hpp  RandomBuilder.hpp  Rotation2DBuilder.hpp  Rotation3DBuilder.hpp  ScaleBuilder.hpp  ShearBuilder.hpp  TranslationBuilder.hpp  ViewBuilder.hpp  ZeroBuilder.hpp
include/Mathter/Vector/: Arithmetic.hpp  Comparison.hpp  Concat.hpp  Math.hpp  OperationUtil.hpp  SIMDUtil.hpp  Swizzle.hpp  Vector.hpp  VectorArithmetic.hpp  VectorCompare.hpp  VectorConcat.hpp  VectorFunction.hpp  VectorImpl.hpp  VectorUtils.hpp
include/Mathter/Vector/SwizzleInc/: Swizzle1.hpp.inc  Swizzle2.hpp.inc  Swizzle3.hpp.inc  Swizzle4.hpp.inc
support/: run-clang-format.py  update-conan-profile.py
test/: ApplyTransform.hpp  Approx.hpp  CMakeLists.txt  Cases.hpp  MatrixUtil.hpp  Rotation.hpp  TestGenerators.hpp  TestGeometry.cpp  TestIntersection.cpp  TestIoStream.cpp  TestMasterHeaders.cpp  TestMatrixArithmetic.cpp  TestMatrixDecomposition.cpp  TestMatrixFunction.cpp  TestMatrixImpl.cpp  TestMatrixVectorArithmetic.cpp  TestQuaternion.cpp  TestTransforms.cpp  TestUtility.cpp  TestVectorArithmetic.cpp  TestVectorFunction.cpp  TestVectorImpl.cpp  Verifyers.hpp  main.cpp
test/Decompositions/: TestLU.cpp  TestQR.cpp  TestSVD.cpp
test/Geometry/: TestBezierCurve.cpp  TestHyperplane.cpp  TestIntersection.cpp  TestLine.cpp  TestLineSegment.cpp  TestRay.cpp  TestTriangle.cpp
test/Matrix/: TestAlgorithm.cpp  TestArithmetic.cpp  TestComparison.cpp  TestMath.cpp  TestMatrix.cpp  TestMatrixArithmetic.cpp  TestMatrixDecomposition.cpp  TestMatrixFunction.cpp  TestMatrixVectorArithmetic.cpp
test/Quaternion/: TestArithmetic.cpp  TestComparison.cpp  TestLiterals.cpp  TestMath.cpp  TestQuaternion.cpp  TestRotationArithmetic.cpp
test/TestMatrix/: TestMatrix.cpp  TestMatrixArithmetic.cpp  TestMatrixCompare.cpp  TestMatrixDecomposition.cpp  TestMatrixFunction.cpp  TestMatrixImpl.cpp  TestMatrixVectorArithmetic.cpp
test/TestUtils/: TestRotation.cpp
test/TestVector/: TestVectorArithmetic.cpp  TestVectorFunction.cpp  TestVectorImpl.cpp
test/Transforms/: TestIdentityBuilder.cpp  TestOrthographicBuilder.cpp  TestPerspectiveBuilder.cpp  TestRandomBuilder.cpp  TestRotation2DBuilder.cpp  TestRotation3DBuilder.cpp  TestScaleBuilder.cpp  TestShearBuilder.cpp  TestTranslationBuilder.cpp  TestViewBuilder.cpp  TestZeroBuilder.cpp
test/Vector/: TestArithmetic.cpp  TestComparison.cpp  TestConcat.cpp  TestMath.cpp  TestSIMDUtil.cpp  TestSwizzle.cpp  TestVector.cpp  TestVectorConcat.cpp
test_package/: CMakeLists.txt  conanfile.py  conanfile.txt
(+667 files in other folders)
